--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,15 +1,15 @@
-{
-  "compilerOptions": {
-    "module": "commonjs",
-    "noImplicitAny": true,
-    "sourceMap": true,
-    "outDir": "../../dist",
-    "baseUrl": ".",
+{ 
+    "compilerOptions": {
+      "module": "amd",
+      "sourceMap": true,
+      "noImplicitAny": true,
+      "target": "es6",
+      "outDir": "../../dist",
+    },
     "paths": {
       "*": ["node_modules/*"]
-    }
-  },
-  "include": [
-    "**/*"
-  ]
-}
+    },
+    "include": [
+          "**/*"
+      ]
+  }
